# LFS148-opentelemetry

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  jaeger-custom-theme.css  jaeger-ui-config.json  otel-collector-config-debug.yaml  otel-collector-config-save-costs.yaml  otel-collector-config.yml  prometheus.yml
automatic-instrumentation/todoui-flask/: app.py  requirements.txt
custom-automatic-instrumentation/: docker-compose.yaml
custom-automatic-instrumentation/todobackend-springboot/: pom.xml
custom-automatic-instrumentation/todobackend-springboot/src/main/resources/: application-dev.properties  application-prod.properties  application.properties
custom-automatic-instrumentation/todoui-flask/: Dockerfile  app.py
custom-automatic-instrumentation/usertodo-golang/: .env.example  Dockerfile  README.md  docker-compose.yml  go.mod
custom-automatic-instrumentation/usertodo-golang/cmd/api/: main.go
custom-automatic-instrumentation/usertodo-golang/internal/adapters/http/: docs.go  router.go  swagger.yaml  swagger_assets.go
custom-automatic-instrumentation/usertodo-golang/internal/adapters/postgres/: models.go  repository.go
custom-automatic-instrumentation/usertodo-golang/internal/domain/: task.go  user.go
manual-instrumentation/todobackend-springboot/: Dockerfile
manual-instrumentation/userbackend-flask/: Dockerfile  pyproject.toml  requirements.txt
manual-instrumentation/userbackend-flask/src/: app.py  header_span_processor.py  logging_utils.py  metric_utils.py  trace_utils.py
(+13 files in other folders)
